--- a/aboutUs.html
+++ b/aboutUs.html
@@ -34,73 +34,29 @@
             <div class="containertl left">
                 <div class="content">
                     <h2>2017</h2>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum,
-                        vim
-                        ea
-                        mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per,
-                        habeo
-                        iusto
-                        primis ea eam.</p>
+                    <p>We got the idea of a module which shows you the data of your car in order to know what your car
+                        has if it doesn't work</p>
                 </div>
             </div>
             <div class="containertl right">
                 <div class="content">
-                    <h2>2016</h2>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum,
-                        vim
-                        ea
-                        mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per,
-                        habeo
-                        iusto
-                        primis ea eam.</p>
+                    <h2>2019</h2>
+                    <p>We started with the basics of the hardware at the end of hte year</p>
                 </div>
             </div>
             <div class="containertl left">
                 <div class="content">
-                    <h2>2015</h2>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum,
-                        vim
-                        ea
-                        mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per,
-                        habeo
-                        iusto
-                        primis ea eam.</p>
+                    <h2>2020</h2>
+                    <p>After we finished with the hardware we started with the firm- and software. We had more time
+                        because of corona an dcould work harder on it. The module was by this time finished and we had
+                        fast a functional app. After that we made a Website and so fast the year passed.</p>
                 </div>
             </div>
             <div class="containertl right">
                 <div class="content">
-                    <h2>2012</h2>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum,
-                        vim
-                        ea
-                        mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per,
-                        habeo
-                        iusto
-                        primis ea eam.</p>
-                </div>
-            </div>
-            <div class="containertl left">
-                <div class="content">
-                    <h2>2011</h2>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum,
-                        vim
-                        ea
-                        mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per,
-                        habeo
-                        iusto
-                        primis ea eam.</p>
-                </div>
-            </div>
-            <div class="containertl right">
-                <div class="content">
-                    <h2>2007</h2>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum,
-                        vim
-                        ea
-                        mazim fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per,
-                        habeo
-                        iusto
-                        primis ea eam.</p>
+                    <h2>2021</h2>
+                    <p>We planed to end in january with the module and start with the beta-phase at the beginning of
+                        february. Then we plan to sale the first 1000 modules</p>
                 </div>
             </div>
         </div>
