--- a/shop.html
+++ b/shop.html
@@ -61,7 +61,7 @@
             </div>
             <br>
             <div class="icons">
-                <a href="https://github.com/"><i class="fab fa-github-square"></i></a>
+                <a href="https://github.com/open-obd"><i class="fab fa-github-square"></i></a>
                 <a href="https://www.youtube.com/channel/UC784_EAIHdpHe-RDClqaQeA?view_as=subscriber"><i
                         class="fab fa-youtube"></i></a>
                 <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
