--- a/aboutUs.html
+++ b/aboutUs.html
@@ -33,30 +33,30 @@
         <div class="timeline">
             <div class="containertl left">
                 <div class="content">
-                    <h2>2017</h2>
-                    <p>We got the idea of a module which shows you the data of your car in order to know what your car
-                        has if it doesn't work</p>
+                    <h2>2021</h2>
+                    <p>We plan to end in january with the module and start with the beta-phase at the beginning of
+                        february. Then we want to sale the first 1000 modules</p>
                 </div>
             </div>
             <div class="containertl right">
-                <div class="content">
-                    <h2>2019</h2>
-                    <p>We started with the basics of the hardware at the end of hte year</p>
-                </div>
-            </div>
-            <div class="containertl left">
                 <div class="content">
                     <h2>2020</h2>
                     <p>After we finished with the hardware we started with the firm- and software. We had more time
-                        because of corona an dcould work harder on it. The module was by this time finished and we had
+                        because of corona an could work harder on it. The module was by this time finished and we had
                         fast a functional app. After that we made a Website and so fast the year passed.</p>
+                </div>
+            </div>
+            <div class="containertl letf">
+                <div class="content">
+                    <h2>2019</h2>
+                    <p>We started with the basics of the hardware at the end of the year</p>
                 </div>
             </div>
             <div class="containertl right">
                 <div class="content">
-                    <h2>2021</h2>
-                    <p>We planed to end in january with the module and start with the beta-phase at the beginning of
-                        february. Then we plan to sale the first 1000 modules</p>
+                    <h2>2017</h2>
+                    <p>We got the idea of a module which shows you the data of your car in order to know what your car
+                        has if it doesn't work</p>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
             </div>
             <br>
             <div class="icons">
-                <a href="https://github.com/"><i class="fab fa-github-square"></i></a>
+                <a href="https://github.com/open-obd"><i class="fab fa-github-square"></i></a>
                 <a href="https://www.youtube.com/channel/UC784_EAIHdpHe-RDClqaQeA?view_as=subscriber"><i
                         class="fab fa-youtube"></i></a>
                 <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
