small change in header

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -12,12 +12,12 @@
 <body>
     <header>
         <nav class="nav container">
-            <div class="logo"><i class="fas fa-car"></i> Automotive</div>
+            <div class="logo"><i class="fas fa-car"></i> open-obd</div>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="obd-info.html">OBD2Info</a></li>
                 <li><a href="shop.html">Shop</a></li>
-                <li><a href="aboutUs.html">About Us</a></li>
+                <li><a href="aboutUs.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="login.html">Login</a></li>
             </ul>
@@ -25,9 +25,9 @@
     </header>
 
     <div class="container">
-        <div class="row">
-            <h2>Our history</h2>
-            <img src="img/Team_icon.png" style="height: 200px; width: 200px;" alt="">
+        <div class="row align-items-center">
+            <h2 class="mr-auto ml-2 pl-5">Our history</h2>
+            <img class="mr-5" src="img/Team_icon.png" style="height: 150px; width: 150px;" alt="">
         </div>
         <br>
         <div class="timeline">
