remove nr. of modules

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -35,7 +35,7 @@
                 <div class="content">
                     <h2>2021</h2>
                     <p>We plan to end in january with the module and start with the beta-phase at the beginning of
-                        february. Then we want to sale the first 1000 modules</p>
+                        february. Then we want to sale the first modules.</p>
                 </div>
             </div>
             <div class="containertl right">
