--- a/obd-info.html
+++ b/obd-info.html
@@ -128,30 +128,25 @@
     </div>
 
     <footer class="footer">
-        <div class="offset-sm-3">
-            <strong>Email</strong>
-            <p>info@open-obd.net</p>
-        </div>
-        <br>
-        <div class="row">
-            <div class="icons" style="font-size: 16px;">
-                <p>We are ...</p>
+        <div class="container d-flex justify-content-between">
+            <div class="">
+                <strong>Email</strong>
+                <p>info@open-obd.net</p>
             </div>
-            <br>
             <div class="icons">
                 <a href="https://github.com/open-obd"><i class="fab fa-github-square"></i></a>
                 <a href="https://www.youtube.com/channel/UC784_EAIHdpHe-RDClqaQeA?view_as=subscriber"><i
                         class="fab fa-youtube"></i></a>
-                <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+                <a href="https://twitter.com/open_obd"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com/open_obd/"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
-        <br>
+        <!-- <br>
         <div class="row footertxt">
             <p>Impressum</p>
             <p>Datenschutzerklärung</p>
             <p>AGBs</p>
-        </div>
+        </div> -->
     </footer>
 
     <script defer>
