--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 
     <div class="container" style="font-size: larger;">
         <h2 class="title mb-4">OBD2 Tester - Diagnostics, Easily Record & Visualize Your Car Data</h2>
-
+        <video width="100%" height="100%" controls>
+            <source src="img/announcment.mp4" type="video/mp4">
+        </video>
         <ul class="nav nav-tabs homeul" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#description" role="tab"
