shop menu to end, obd-info improvment

--- a/obd-info.html
+++ b/obd-info.html
@@ -16,16 +16,16 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="obd-info.html">OBD2Info</a></li>
-                <li><a href="shop.html">Shop</a></li>
                 <li><a href="aboutUs.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="login.html">Login</a></li>
+                <li><a href="shop.html">Shop</a></li>
             </ul>
         </nav>
     </header>
     <div class="container">
         <h2 class="title">Info about OBD</h2>
-        <div class="row">
+        <div class="d-flex">
             <p>
                 On-board diagnostics (OBD) is an automotive term referring to a vehicle's self-diagnostic and reporting
                 capability. OBD systems give the vehicle
@@ -45,8 +45,8 @@
             </p>
             <img src="img/OBD_connector_shape.svg.png" alt="" style="width: 300px; height: 120px;">
         </div>
-        <br><br>
-        <button class="accordion">OBD-II diagnostic data available</button>
+        <br>
+        <button class="accordion pl-0">OBD-II diagnostic data available</button>
         <div class="panel">
             <p> OBD-II provides access to data from the engine control unit (ECU) and offers a valuable source of
                 information when troubleshooting problems inside a vehicle. The SAE J1979 standard defines a method for
@@ -60,7 +60,7 @@
                 additional proprietary DTCs.</p>
         </div>
         <br>
-        <button class="accordion">Mode of operation according to ISO 15031</button>
+        <button class="accordion pl-0">Mode of operation according to ISO 15031</button>
         <div class="panel">
             <ul>
                 <li>Mode $01 is used to identify what powertrain information is available to the scan tool.</li>
@@ -93,22 +93,20 @@
             </ul>
         </div>
         <br>
-        <button class="accordion">OBD-II diagnostic trouble codes</button>
+        <button class="accordion pl-0">OBD-II diagnostic trouble codes</button>
         <div class="panel">
             <p> OBD-II diagnostic trouble codes OBD-II diagnostic trouble codes (DTCs) contain 1 letter and 4 numbers,
-                and
-                are divided into the following
-                categories:
+                are divided into the following categories:
+            </p>
             <ul>
                 <li>B – Body (includes air conditioning and airbag) (1164 codes)</li>
                 <li>C – Chassis (includes ABS) (486 codes)</li>
                 <li>P – Powertrain (engine and transmission) (1688 codes)</li>
                 <li>U – Network (wiring bus) (299 codes)</li>
             </ul>
-            </p>
         </div>
         <br>
-        <button class="accordion">Standards</button>
+        <button class="accordion pl-0">Standards</button>
         <div class="panel">
             <p>
             <ul>
