--- a/shop.html
+++ b/shop.html
@@ -16,17 +16,17 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="obd-info.html">OBD2Info</a></li>
-                <li><a href="shop.html">Shop</a></li>
                 <li><a href="aboutUs.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="login.html">Login</a></li>
+                <li><a href="shop.html">Shop</a></li>
             </ul>
         </nav>
     </header>
     <div class="container">
         <h2 class="title">Products</h2>
         <br>
-        <h4 class="subtitle">First Generation of Tester</h4>
+        <h4 class="subtitle">First tester generation</h4>
         <br><br>
         <div class="rowimg">
             <img src="img/IMG_2444.JPG" style="width: 160px; height: 90px;" alt="Pro" class="offset-md-4">
